[gd_scene load_steps=3 format=3 uid="uid://c7ylhou0j4bk8"]

[ext_resource type="Script" path="res://Utility/upgrade_option.gd" id="1_ppqdt"]
[ext_resource type="FontFile" uid="uid://c4ufad13gw813" path="res://fonts/CYBERBANG.ttf" id="2_er6fq"]

[node name="UpgradeOption" type="ColorRect"]
custom_minimum_size = Vector2(180, 50)
anchors_preset = -1
anchor_right = 0.281
anchor_bottom = 0.139
offset_right = 0.159988
offset_bottom = -0.0400047
color = Color(0.564706, 0.564706, 0.564706, 1)
script = ExtResource("1_ppqdt")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 26.0
offset_bottom = 26.0
color = Color(0, 0, 0, 1)

[node name="UpgradeIcon" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(0.75, 0.75)

[node name="lbl_name" type="Label" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 2.0
offset_right = 85.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("2_er6fq")
text = "Name"
horizontal_alignment = 1

[node name="lbl_description" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 27.0
offset_right = 166.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("2_er6fq")
theme_override_font_sizes/font_size = 8
text = "description of item"
autowrap_mode = 3

[node name="lbl_level" type="Label" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 3.0
offset_right = 173.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("2_er6fq")
theme_override_font_sizes/font_size = 12
text = "level: 1"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
